# voice-ime-rust-2.0.1

./: .gitignore  CHANGELOG.md  README.en.md  README.md  index.html  package-lock.json  package.json
docs/: 2.0.1-roadmap.md  acceptance.md  asr-benchmark.md  capswriter-adaptation-plan.md  cross-platform-packaging.md  hotwords.md  model-pack-strategy.md  release-notes-2.0.1.md  translation-benchmark.md
packaging/: Build-CrossPlatform.ps1  Test-PortableRelease.ps1  model-manifest.json  package-available-model-packs.ps1  package-model-pack.ps1  package-portable.ps1  package-release-assets.ps1  publish-github-release.ps1  启动语音输入.bat
packaging/tools/: ASR-Benchmark.ps1  Browser-Input-Acceptance.ps1  Foreground-Input-Acceptance.ps1  Mock-External-Asr.ps1  Mock-External-Translate.ps1  Model-Pack-Import-Acceptance.ps1  Model-Root.ps1  Notepad-Input-Acceptance.ps1  Start-MiniCPM-Translate.ps1  Target-Machine-Acceptance.ps1  Translation-Acceptance.ps1
scripts/: ui-smoke.mjs
src/: main.ts  styles.css  tauri-adapter.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: asr.rs  audio.rs  benchmark.rs  cancel.rs  clipboard.rs  config.rs  core.rs  doctor.rs  history.rs  input_smoke.rs  input_target.rs  itn.rs  lib.rs  llm.rs  main.rs  model_pack.rs  panic_log.rs  ptt.rs  retention.rs  support_bundle.rs  text.rs  translation.rs  translation_benchmark.rs  translation_log.rs  tray.rs  win_bridge.rs  window_shape.rs
src-tauri/src/input_target/: fallback.rs
