[package]
name = "voice-ime"
version = "2.0.1"
description = "Personal Voice IME rewritten in Rust"
authors = ["GFH"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "voice_ime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
dirs = "6"
hound = "3"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-onnx = { version = "1.13.2", default-features = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-opener = "2"
tempfile = "3"
thiserror = "2"
uiautomation = { version = "0.25.0", default-features = false, features = ["input", "pattern", "control"] }
uuid = { version = "1", features = ["v4", "serde"] }
windows = { version = "0.62.2", features = [
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_UI_Accessibility"
] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
